Update git ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/build/expath-model-java-0.*.zip
+/build/expath-model-java.jar
 /model-java/nbproject/private/
 /model-java/nbproject/genfiles.properties
 /model-java/dist/
