Update the git ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /model-java/nbproject/genfiles.properties
 /model-java/dist/
 /model-java/build/
+/model-java/src/org/expath/model/version.properties
