--- a/tools-java/nbproject/project.properties
+++ b/tools-java/nbproject/project.properties
@@ -35,10 +35,11 @@ javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.5
+javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -59,7 +60,7 @@ javadoc.windowtitle=
 main.class=org.expath.tools.Version
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
