Do not rely on NetBeans library dependency anymore

--- a/tools-java/nbproject/project.properties
+++ b/tools-java/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/tools-java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.testng-6.8.1-dist.jar=lib/testng-6.8.1-dist.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -43,7 +44,7 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.testng.classpath}
+    ${file.reference.testng-6.8.1-dist.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
