--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.expath.tools</groupId>
     <artifactId>tools-java</artifactId>
-    <version>0.7.0</version>
+    <version>0.7.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>EXPath Tools Java Library</name>
@@ -21,7 +21,7 @@
         <connection>scm:git:https://github.com/expath/expath-tools-java.git</connection>
         <developerConnection>scm:git:https://github.com/expath/expath-tools-java.git</developerConnection>
         <url>scm:git:https://github.com/expath/expath-tools-java.git</url>
-      <tag>tools-java-0.7.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
