--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.7.1</version>
+            <!-- NOTE(AR) Version 7.6.0+ requires JDK 11+ -->
+            <version>7.5.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
